The Main class in FastDoubleParserDemo now comparse float number benchmarks against java.util.Float.parseFloat().
Signed-off-by: Werner Randelshofer <werner.randelshofer@fibermail.ch>